restructure file folders and set up includes

--- a/src/about.html
+++ b/src/about.html
@@ -10,7 +10,7 @@
 
 <body>
 <div id="wrapper">
-<!--#include virtual="ssi/header-nav.html" -->
+include "includes/header-nav.html"
 
 <div id="content">
   <h1>About</h1>
@@ -20,9 +20,9 @@
   <br clear="both" />
   <h2 class="caption red"><em>&quot;level of expression and creation&quot;</em></h2>
     <p class="caption">Mix is also very involved with music perfromance as well as music production. We also embrace performance and production to be one in the same. As performance adds a level of expression and creation one may not find in a traditional music production workflow. As traditional musicians are performers and talented instrumentalists our artists are very talented musicians as well. They are just very good and controlling a mix and manipulating all aspects of song be it the bass  line, creating a build or even a roll. They are good at doing so and have the knowledge of song structure and music theory that any good producer should.</p>
-  
+
 </div>
-<div id="footer"></div>
+include "includes/footer.html"
 
 
 </div>
