--- a/src/artists.html
+++ b/src/artists.html
@@ -10,24 +10,25 @@
 
 <body>
 <div id="wrapper">
-<!--#include virtual="ssi/header-nav.html" -->
+include "includes/header-nav.html"
 
 <div id="content">
   <h1>Artists</h1>
   <h2 class="blue"><img src="images/evantr0nic.jpg" alt="Artist: Evantr0nic" width="263" height="303" class="floatRight" />Evantr0nic</h2>
   <p>Evantr0nic, but friends know him as Evan Straley is a talented bass player. His style of music combines his ability to play Bass with some mixing to create great sets. His Bass is a part of his live act. He also produces some Phsy-Chill tracks and favors using unique vocals over his productions. Check out his music as his use of vocals is far from the ordinary.</p>
-<iframe width="500" height="60" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F36036922&amp;auto_play=false&amp;show_artwork=false&amp;color=00C7D7"></iframe>
+<iframe width="500" height="115" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F36036922&amp;auto_play=false&amp;show_artwork=false&amp;color=00C7D7"></iframe>
   <br />
   <h2 class="green"><img src="images/anitek.jpg" alt="Artist: Evantr0nic" width="262" height="303" class="floatLeft" />Anitek</h2>
   <p>Anitek is an absolute maniac on the 1200's. With a passion for scratching he plays on Vinyl timecoded through Serato. He is currently travelling through Europe and play in lounges and nightclubs in countries such as France and Switzerland. He, as all of our artists do, believes in the music. All of his productions and performances are accessible for free. So listen and enjoy the music with no-hassle and no-terms or conditions. Just triphop, instrumentals and hip-hop all day long.</p>
-  <iframe width="500" height="60" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F43124060&amp;auto_play=false&amp;show_artwork=false&amp;color=03A154"></iframe>
+  <iframe width="500" height="115" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F43124060&amp;auto_play=false&amp;show_artwork=false&amp;color=03A154"></iframe>
   <br clear="left"/>
   <h2 class="red"><img src="images/whiteboy.jpg" alt="Artist: Evantr0nic" width="257" height="299" class="floatRight" />Whiteboy</h2>
   <p>This is our most energetic of our artists. Whiteboy is a DJ who often accompanies local New Jersey wrapper Mic Familiar. Whiteboy is also a collaborator in the group Dubbudz who perform live music with a DJ set play style.</p>
-  <iframe width="500" height="60" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F14753798&amp;auto_play=false&amp;show_artwork=false&amp;color=D84636"></iframe>
+  <iframe width="500" height="115" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F14753798&amp;auto_play=false&amp;show_artwork=false&amp;color=D84636"></iframe>
 </div>
 
 
+include "includes/footer.html"
 </div>
 <div id="bottomGraphic" class="controller"></div>
 </body>
