--- a/src/events.html
+++ b/src/events.html
@@ -10,11 +10,11 @@
 
 <body>
 <div id="wrapper">
-<!--#include virtual="ssi/header-nav.html" -->
+include "includes/header-nav.html"
 
 <div id="content">
   <h1>Events</h1>
-<img src="images/speaker-right.jpg" alt="Artist: Evantr0nic" width="439" height="658" class="floatRight" />Tour Dates  
+<img src="images/speaker-right.jpg" alt="Artist: Evantr0nic" width="439" height="658" class="floatRight" />Tour Dates
   <table width="480" border="0">
     <tr>
       <td width="471">Evantr0nic - On Tour</td>
@@ -86,10 +86,9 @@
     </tr>
 </table>
 </div>
-<div id="footer"></div>
-
 
 </div>
 <!--<div id="bottomGraphic" class="pads"></div>-->
+include "includes/footer.html"
 </body>
 </html>
