--- a/src/index.html
+++ b/src/index.html
@@ -53,9 +53,9 @@ $(document).ready(function() {
 </script>
 <body>
 <div id="wrapper">
-<!--#include virtual="ssi/header-nav.html" -->
-    
-    
+include "includes/header-nav.html"
+
+
     <div class="slider-wrapper theme-default">
             <div class="ribbon"></div>
             <div id="slider" class="nivoSlider">
@@ -89,7 +89,7 @@ $(document).ready(function() {
 
 </div>
 <div id="bottomGraphic" class="cues"></div>
-<!--#include virtual="ssi/footer.html" -->
+include "includes/footer.html"
 
 </body>
 
